# AgentLedger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
agentledger-cli/: pyproject.toml
agentledger-cli/agentledger_cli/: main.py
agentledger-sdk/: pyproject.toml
agentledger-sdk/agentledger/: __init__.py  ledger.py  pricing.py  topology.py  tracker.py
agentledger-sdk/agentledger/integrations/: __init__.py  adk.py  crewai.py  langgraph.py  litellm.py
agentledger-server/: Dockerfile  agentledger.db  pyproject.toml
agentledger-server/app/: config.py  database.py  main.py
agentledger-server/app/models/: __init__.py  schemas.py  tables.py
agentledger-server/app/routes/: agents.py  analyze.py  budgets.py  dashboard.py  events.py  recommendations.py  shapley.py  topology.py  waste.py
agentledger-server/app/workers/: budget_monitor.py  routing_advisor.py  scheduler.py  shapley_engine.py  sir_router.py  waste_detector.py
docs/: DEVELOPER_GUIDE.md
examples/basic/: quickstart.py
examples/langgraph/: example.py
examples/litellm/: proxy_config.yaml  sdk_callback.py
pricing/: models.json
results/: 100_agent_shapley_results.md
tests/: test_100_agents.py
