[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger"
version = "0.1.0"
description = "Agent-aware cost intelligence for AI. Know exactly where your agent money goes."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Nabeel Khayal" }]
keywords = ["ai", "agents", "cost", "observability", "llm", "langchain", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
crewai = ["crewai>=0.41.0"]
adk = ["google-adk>=0.1.0"]
litellm = ["litellm>=1.0.0"]
all = ["langgraph>=0.2.0", "crewai>=0.41.0", "google-adk>=0.1.0", "litellm>=1.0.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/agentledger/agentledger"
Documentation = "https://agentledger.dev"
Repository = "https://github.com/agentledger/agentledger"
Issues = "https://github.com/agentledger/agentledger/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentledger"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
