[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentledger-server"
version = "0.1.0"
description = "AgentLedger API server — event ingestion, cost intelligence, and waste detection."
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24.0", "ruff>=0.4.0"]

[tool.ruff]
target-version = "py310"
line-length = 100
